--- a/web/picoweb/templates/clock.html
+++ b/web/picoweb/templates/clock.html
@@ -60,20 +60,18 @@
                         <ul class="dropdown-menu">
                             <li>
                                 <div style="padding: 1vw;">
-                                    <form>
-                                        <div class="col-xs-12">
-                                            <label for="RemoteId">RemoteId:</label>
-                                            <input class="form-control" id="RemoteId" type="text" value="" maxlength="4" pattern="[a-h0-9]+" placeholder="PartnerId">
-                                        </div>
-                                        <div class="col-xs-12">
-                                            <button type="submit" id="enterRoomBtn" class="btn btn-raised btn-success btn-sm text-break" title="connect">
-                                                <i class='fa fa-arrow-right'></i><span class="hidden-xs"> Connect</span>
-                                            </button>
-                                            <button type="submit" id="leaveRoomBtn" class="btn btn-raised btn-warning btn-sm text-break" title="disconnect">
-                                                <i class='fa fa-arrow-left'></i><span class="hidden-xs"> Disconnect</span>
-                                            </button>
-                                        </div>
-                                    </form>
+                                    <div class="col-xs-12">
+                                        <label for="RemoteId">RemoteId:</label>
+                                        <input class="form-control" id="RemoteId" type="text" value="" maxlength="4" pattern="[a-h0-9]+" placeholder="PartnerId">
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <button type="button" id="enterRoomBtn" class="btn btn-raised btn-success btn-sm text-break" title="connect">
+                                            <i class='fa fa-arrow-right'></i><span class="hidden-xs"> Connect</span>
+                                        </button>
+                                        <button type="button" id="leaveRoomBtn" class="btn btn-raised btn-warning btn-sm text-break" title="disconnect">
+                                            <i class='fa fa-arrow-left'></i><span class="hidden-xs"> Disconnect</span>
+                                        </button>
+                                    </div>
                                 </div>
                             </li>
                         </ul>
